--- a/Resturants/StroyBoard/Add.storyboard
+++ b/Resturants/StroyBoard/Add.storyboard
@@ -917,19 +917,39 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qfc-nn-lCX">
+                                <rect key="frame" x="344" y="83" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="25" id="F8f-Bm-FwD"/>
+                                    <constraint firstAttribute="height" constant="25" id="Gf6-5R-vAb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <color key="tintColor" red="0.63529411759999999" green="0.63529411759999999" blue="0.63529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="multiply.circle.fill" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="20" scale="medium" weight="medium"/>
+                                </state>
+                                <connections>
+                                    <action selector="ontapDismiss:" destination="hm4-oA-yCW" eventType="touchUpInside" id="HBo-hw-9IK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yQK-fu-Sp5"/>
                         <color key="backgroundColor" systemColor="labelColor"/>
                         <constraints>
                             <constraint firstItem="yQK-fu-Sp5" firstAttribute="trailing" secondItem="FLM-Yo-0om" secondAttribute="trailing" id="4jj-sz-Enl"/>
+                            <constraint firstItem="yQK-fu-Sp5" firstAttribute="trailing" secondItem="Qfc-nn-lCX" secondAttribute="trailing" constant="24" id="7LC-cn-BxQ"/>
                             <constraint firstItem="YUg-7b-Zoi" firstAttribute="leading" secondItem="yQK-fu-Sp5" secondAttribute="leading" constant="16" id="LGX-hT-q32"/>
                             <constraint firstItem="yQK-fu-Sp5" firstAttribute="trailing" secondItem="YUg-7b-Zoi" secondAttribute="trailing" constant="16" id="b0f-KH-Xd8"/>
                             <constraint firstItem="YUg-7b-Zoi" firstAttribute="bottom" secondItem="yQK-fu-Sp5" secondAttribute="bottom" id="gO8-Xw-7xb"/>
+                            <constraint firstItem="Qfc-nn-lCX" firstAttribute="top" secondItem="yQK-fu-Sp5" secondAttribute="top" constant="24" id="k91-nt-jCN"/>
                             <constraint firstItem="YUg-7b-Zoi" firstAttribute="top" secondItem="FLM-Yo-0om" secondAttribute="bottom" constant="12" id="qe9-GI-pfe"/>
                             <constraint firstItem="FLM-Yo-0om" firstAttribute="leading" secondItem="yQK-fu-Sp5" secondAttribute="leading" constant="16" id="zkr-L3-UlD"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="btnBackground" destination="h2D-XB-aOu" id="CXO-pB-aVa"/>
+                        <outlet property="btnDismiss" destination="Qfc-nn-lCX" id="xgE-DY-h78"/>
                         <outlet property="collectColors" destination="YUg-7b-Zoi" id="dzL-9O-7xQ"/>
                         <outlet property="lblBackground" destination="fcj-C6-2QD" id="God-oa-FRU"/>
                         <outlet property="lblFont1" destination="TdW-IH-2Sx" id="jP9-3Z-mBG"/>
